<resources>
    <string name="ERROR_RELOAD">Reload</string>
    <string name="ERROR_TRY_AGAIN">Try Again</string>
    <string name="SETTINGS_NOTIFICATION_PREFERENCES">Notifications</string>
    <string name="SETTINGS_NOTIFICATION_PREFERENCES_HINT">Select the types of alerts you’d like to receive.</string>
    <string name="_mnet_page_count_tag">##page_count_tag##</string>
    <string name="_mnet_view_id_tag">##view_id_tag##</string>
    <string name="a_dialog_pharmacy_drive_tag">Drive-thru</string>
    <string name="a_pharmacy_detail_home_delivery_tag">Home Delivery</string>
    <string name="abbreviations_link_text">Abbreviations</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">about</string>
    <string name="about_html">About.html</string>
    <string name="accept">Accept</string>
    <string name="accept_first_paragraph_consumer">WebMD processes personal data about users of our mobile applications, including health data, through the use of mobile identifiers (similar to cookies) to deliver our services, personalize advertising and to analyze site activity. We may share certain information about our users with our advertising and analytics partners. For additional details, refer to the WebMD Privacy Policy.</string>
    <string name="accept_first_paragraph_professional">WebMD uses mobile identifiers (similar to cookies) and other technologies to deliver the Medscape services, personalize content and advertising and to analyze user activity. For additional details, refer to our Cookie Policy.</string>
    <string name="accept_second_paragraph_consumer">By clicking “I AGREE” below, you agree to the WebMD Privacy Policy and WebMD’s personal data processing and cookie practices as described therein.</string>
    <string name="accept_second_paragraph_professional">By clicking “I AGREE” below, you consent to the use of mobile identifiers and other technologies as described in our Cookie Policy.</string>
    <string name="accept_title">Privacy</string>
    <string name="accessibility_baxter_dose_type">Dose Type</string>
    <string name="accessibility_calculator_link_btn">Link to Calculator</string>
    <string name="accessibility_extra_section_icon">Icon</string>
    <string name="accessibility_featured_content_ad">Featured Content</string>
    <string name="accessibility_linked_calc_icon">Link Image</string>
    <string name="accessibility_more_info_section_icon">Icon</string>
    <string name="accessibility_next_btn">Next Button</string>
    <string name="accessibility_prev_btn">Previous Button</string>
    <string name="accessibility_reference_book_title_page">Reference Book Title Page</string>
    <string name="accessibility_save_question_icon">Right Arrow</string>
    <string name="account_details">Account Details</string>
    <string name="account_link_title">QxMD Universal Account</string>
    <string name="account_required_text">To start saving prescriptions and pharmacies, you must create a WebMD account. If you\'ve registered on our website WebMD.com, that works here too!</string>
    <string name="account_required_title">Account Required</string>
    <string name="account_sync_conflict_body">It looks like you have an existing Calculate account with its own set of backed up settings and data.\10\10Would you like to keep the settings and data from this device, or from your existing account?</string>
    <string name="account_sync_conflict_title">Account Sync</string>
    <string name="account_sync_conflict_use_existing">Use data from existing account</string>
    <string name="account_sync_conflict_use_this">Keep data from this device</string>
    <string name="accredited_label">Accredited</string>
    <string name="action_clear">Clear</string>
    <string name="action_search">Search</string>
    <string name="action_select_all">Select all</string>
    <string name="action_settings">Settings</string>
    <string name="action_unselect_all">Unselect all</string>
    <string name="activity_expire_dialog_button_continue">OK</string>
    <string name="activity_expired_text">The accredited provider can no longer issue the certificates for this activity. Medscape cannot attest to the timeliness of expired CME activities</string>
    <string name="activity_expired_title">This activity has expired</string>
    <string name="activity_savings_title">Savings</string>
    <string name="activity_tracker_title">Activity Tracker</string>
    <string name="ad_blocker_dialog_message">It’s likely that an Ad Blocker has disabled access to Medscape’s content servers.\10\10Please use your Ad Blocker’s “Revert” function and then launch Medscape again.</string>
    <string name="ad_blocker_dialog_title">Connection Interrupted</string>
    <string name="ad_env">Ad Env</string>
    <string name="ad_label">ADVERTISEMENT</string>
    <string name="ad_url">Ad URL</string>
    <string name="add">ADD</string>
    <string name="add_image_for_post">Add Image</string>
    <string name="add_location">Add Location</string>
    <string name="add_new_med">ADD</string>
    <string name="add_profession">Add Profession</string>
    <string name="add_specialty">Add Specialty</string>
    <string name="add_to_interaction">Add to Interaction Checker</string>
    <string name="add_to_interactions">Add to Interactions</string>
    <string name="add_update_below">Add update below</string>
    <string name="ads_close">CLOSE</string>
    <string name="advertisement">ADVERTISEMENT</string>
    <string name="alert_dialog_app_update_available_mandatory_message">This version of Medscape is no longer supported. Please tap the Update button below to visit the Google Play Store and update to the latest version.</string>
    <string name="alert_dialog_app_update_available_optional_message">A new version of Medscape is now available in the Google Play Store. Tap the Update button below to upgrade to latest version.</string>
    <string name="alert_dialog_app_update_available_title">Application Update</string>
    <string name="alert_dialog_clinical_article_network_connection_error_message">Internet connectivity was interrupted.\10To access all articles when no Internet connection is available, download the Clinical Reference by selecting Data Updates from the menu.</string>
    <string name="alert_dialog_clinical_article_network_connection_error_message_no_heading">To access all articles when no Internet connection is available, download the Clinical Reference by selecting Data Updates from the menu.</string>
    <string name="bottomnav_consult">Consult</string>
    <string name="bottomnav_education">Education</string>
    <string name="bottomnav_events">Events</string>
    <string name="bottomnav_home">Home</string>
    <string name="bottomnav_news">News</string>
    <string name="calculator_clear_all">Clear all</string>
    <string name="calculator_decimal">.</string>
    <string name="calculator_eight">8</string>
    <string name="calculator_five">5</string>
    <string name="calculator_four">4</string>
    <string name="calculator_nine">9</string>
    <string name="calculator_one">1</string>
    <string name="calculator_seven">7</string>
    <string name="calculator_six">6</string>
    <string name="calculator_three">3</string>
    <string name="calculator_two">2</string>
    <string name="calculator_zero">0</string>
    <string name="dialog_input_cancel">CANCEL</string>
    <string name="dialog_input_done">DONE</string>
    <string name="dialog_input_hint_quantity">Enter a quantity between 1–1000</string>
    <string name="dialog_input_sub_title_quantity">Enter drug quantity</string>
    <string name="dialog_input_title_quantity">Custom Quantity</string>
    <string name="dont_see_your_meds">Don\'t see your med?</string>
    <string name="email_hint">Enter Email</string>
    <string name="find">Find in Page</string>
    <string name="nav_drawer_debug">Debug Settings</string>
    <string name="nav_drawer_my_invitations">My Invitations</string>
    <string name="nav_drawer_my_profile">Consult Profile</string>
    <string name="nav_drawer_saved">Saved Content</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="patient_email">Patient Email</string>
    <string name="row_answers_count_1">1</string>
    <string name="row_answers_count_2">2</string>
    <string name="row_answers_count_3">3</string>
    <string name="row_answers_message_1">Filter your query with details like biomarker, severity, patient type, etc. to view expert advice at the clinical decision point level.</string>
    <string name="row_answers_message_2">The short video is accompanied by a transcript and evidence-based guidelines.</string>
    <string name="row_answers_message_3">View other relevant videos or go back to the Decision Tree for more clinical pathways.</string>
    <string name="row_answers_steps">Get Immediate Answers in 3 Quick Steps:</string>
    <string name="row_answers_title_1">Select condition type / subtype to navigate decision points</string>
    <string name="row_answers_title_2">Watch (or read) what the experts say</string>
    <string name="row_answers_title_3">Explore more decision points</string>
    <string name="row_header_image_line">Image line</string>
    <string name="save">Save</string>
    <string name="saving_card_info_email">An image of the savings card will be sent to the email provided.</string>
    <string name="send">Send</string>
    <string name="send_email">Send via Email</string>
    <string name="share">Share</string>
    <string name="share_info">Send your patient a savings card powered by WebMDRx to use at participating pharmacies.</string>
    <string name="share_savings_patient">Share Savings with Patient</string>
    <string name="text_color">color</string>
    <string name="text_fill_color">fill color</string>
    <string name="text_opacity">opacity</string>
    <string name="text_setting">Text Settings</string>
    <string name="text_squiggly">Squiggly</string>
    <string name="text_straight">straight</string>
    <string name="text_width">width</string>
    <string name="try_a_different_one">Try a different one, or add what\10 you\'ve typed</string>
</resources>