<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/action_save_empty_white_24dp" android:id="@+id/action_save" android:title="@string/save" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_share_white_24dp" android:id="@+id/action_share" android:title="@string/share" app:showAsAction="collapseActionView"/>
    <item android:icon="@drawable/ic_format_size_black_24dp" android:id="@+id/action_content_setting" android:title="@string/text_setting" app:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_find" android:title="@string/find" app:showAsAction="collapseActionView"/>
</menu>
