<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/row_answers_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:id="@+id/image_line_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:contentDescription="@string/row_header_image_line" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_half_line"/>
    <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@color/white_87" android:gravity="center_horizontal" android:id="@+id/text_steps" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/row_answers_steps" android:lineSpacingExtra="8sp" android:fontFamily="@font/roboto_bold" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/image_line_top"/>
    <TextView android:id="@+id/text_count_1" android:layout_marginTop="24dp" android:text="@string/row_answers_count_1" android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/text_steps" style="@style/AnswersCount"/>
    <TextView android:id="@+id/text_title_1" android:text="@string/row_answers_title_1" android:layout_marginStart="32dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/text_count_1" app:layout_constraintTop_toTopOf="@+id/text_count_1" style="@style/AnswersTitle"/>
    <TextView android:id="@+id/text_message_1" android:layout_marginTop="12dp" android:text="@string/row_answers_message_1" app:layout_constraintEnd_toEndOf="@+id/text_title_1" app:layout_constraintStart_toStartOf="@+id/text_title_1" app:layout_constraintTop_toBottomOf="@+id/text_title_1" style="@style/AnswersMessage"/>
    <View android:id="@+id/line_1_2" android:background="@drawable/bg_vertical_line_dash" android:layout_width="wrap_content" android:layout_height="0dp" app:layout_constraintBottom_toTopOf="@+id/text_count_2" app:layout_constraintEnd_toEndOf="@+id/text_count_1" app:layout_constraintStart_toStartOf="@+id/text_count_1" app:layout_constraintTop_toBottomOf="@+id/text_count_1"/>
    <TextView android:id="@+id/text_count_2" android:layout_marginTop="40dp" android:text="@string/row_answers_count_2" android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/text_message_1" style="@style/AnswersCount"/>
    <TextView android:id="@+id/text_title_2" android:text="@string/row_answers_title_2" android:layout_marginStart="32dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/text_count_2" app:layout_constraintTop_toTopOf="@+id/text_count_2" style="@style/AnswersTitle"/>
    <TextView android:id="@+id/text_message_2" android:layout_marginTop="12dp" android:text="@string/row_answers_message_2" app:layout_constraintEnd_toEndOf="@+id/text_title_2" app:layout_constraintStart_toStartOf="@+id/text_title_2" app:layout_constraintTop_toBottomOf="@+id/text_title_2" style="@style/AnswersMessage"/>
    <View android:id="@+id/line_2_3" android:background="@drawable/bg_vertical_line_dash" android:layout_width="wrap_content" android:layout_height="0dp" app:layout_constraintBottom_toTopOf="@+id/text_count_3" app:layout_constraintEnd_toEndOf="@+id/text_count_2" app:layout_constraintStart_toStartOf="@+id/text_count_2" app:layout_constraintTop_toBottomOf="@+id/text_count_2"/>
    <TextView android:id="@+id/text_count_3" android:layout_marginTop="40dp" android:text="@string/row_answers_count_3" android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/text_message_2" style="@style/AnswersCount"/>
    <TextView android:id="@+id/text_title_3" android:text="@string/row_answers_title_3" android:layout_marginStart="32dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/text_count_3" app:layout_constraintTop_toTopOf="@+id/text_count_3" style="@style/AnswersTitle"/>
    <TextView android:id="@+id/text_message_3" android:layout_marginTop="12dp" android:text="@string/row_answers_message_3" app:layout_constraintEnd_toEndOf="@+id/text_title_3" app:layout_constraintStart_toStartOf="@+id/text_title_3" app:layout_constraintTop_toBottomOf="@+id/text_title_3" style="@style/AnswersMessage"/>
    <ImageView android:id="@+id/image_line_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:layout_marginBottom="12dp" android:contentDescription="@string/row_header_image_line" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/text_message_3" app:srcCompat="@drawable/ic_half_line"/>
</androidx.constraintlayout.widget.ConstraintLayout>
