<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="20dp" android:textStyle="bold" android:gravity="center" android:id="@+id/d_input_text_view_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="15dp" android:text="@string/dialog_input_title_quantity"/>
    <TextView android:textSize="14dp" android:gravity="center" android:id="@+id/d_input_text_view_sub_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dialog_input_sub_title_quantity"/>
    <EditText android:textSize="16dp" android:textColor="@color/black" android:id="@+id/d_input_edit_text_input" android:background="@android:color/white" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:hint="@string/dialog_input_hint_quantity" android:inputType="number"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textSize="14dp" android:textColor="@color/colorRxBlue" android:id="@+id/input_dialog_button_negative" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/dialog_input_cancel" android:layout_weight="1"/>
        <Button android:enabled="false" android:textSize="14dp" android:textColor="@color/colorRxBlue" android:id="@+id/input_dialog_button_positive" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/dialog_input_done" android:layout_weight="1" android:alpha="0.5"/>
    </LinearLayout>
</LinearLayout>
