<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/root_layout" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="8dp">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@+id/contact_info_layout" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp">
                <com.wbmd.wbmdcommons.customviews.CustomFontTextView android:textSize="20dp" android:textColor="@color/share_label_text" android:id="@+id/share_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:text="@string/share_savings_patient" app:fontName="Roboto-Medium.ttf"/>
                <TextView android:textSize="14dp" android:textColor="@color/share_info_text" android:id="@+id/share_info" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="4dp" android:layout_marginBottom="8dp" android:text="@string/share_info"/>
                <com.wbmd.wbmdcommons.customviews.CustomFontTextView android:textSize="16dp" android:textColor="@color/medscape_blue" android:id="@+id/share_option_sub_title1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="8dp" android:text="@string/send_email" app:fontName="Roboto-Medium.ttf"/>
                <TextView android:textSize="14dp" android:textColor="@color/share_label_text" android:id="@+id/share_option_sub_title2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="2dp" android:layout_marginBottom="8dp" android:text="@string/patient_email"/>
                <EditText android:textSize="17dp" android:textColor="@color/black" android:id="@+id/edit_text_contact" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/email_hint" android:singleLine="true" android:imeOptions="actionGo"/>
                <TextView android:textSize="14dp" android:textColor="@color/share_info_text" android:id="@+id/share_saving_card_info" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginTop="16dp" android:layout_marginBottom="8dp" android:text="@string/saving_card_info_email"/>
            </LinearLayout>
            <Button android:textSize="17dp" android:textColor="@android:color/white" android:id="@+id/button_share_savings_card" android:background="@drawable/blue_rectangular_ripple" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="1dp" android:layout_marginRight="1dp" android:text="@string/send" android:layout_below="@+id/contact_info_layout" android:layout_alignParentBottom="true" android:textAllCaps="false"/>
            <ProgressBar android:id="@+id/progress_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="?android:attr/progressBarStyle"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
