<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/layout_dont_see_your_med" android:background="@color/almost_webmd_light_blue" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:alpha="0.5">
    <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/almost_black" android:id="@+id/dont_see_your_meds" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dont_see_your_meds" android:lineSpacingExtra="5sp" android:fontFamily="sans-serif-medium" android:layout_alignParentStart="true"/>
    <TextView android:textSize="14sp" android:textStyle="normal" android:textColor="@color/gray_webmd" android:id="@+id/try_a_different_one" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/try_a_different_one" android:layout_below="@+id/dont_see_your_meds" android:lineSpacingExtra="6sp" android:fontFamily="sans-serif" android:layout_alignParentStart="true"/>
    <Button android:textSize="14sp" android:textStyle="normal" android:textColor="@color/almost_webmd_blue" android:id="@+id/add_new_med" android:background="@drawable/rectangle_rounded_corners_shape_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_new_med" android:layout_centerInParent="true" android:lineSpacingExtra="6sp" android:fontFamily="sans-serif-medium" android:layout_alignParentEnd="true"/>
</RelativeLayout>
